<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WatchCheck</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_measure">measure</string>
    <string name="app_about">(C) 2011-2014 by Christoph Lorenz, www.uhrenbastler.de.\nAll rights reserved, no warranty at all!\nUse at your own risk!</string>
    <string name="about">About</string>
    <string name="export_data">Export data</string>
    <string name="import_data">Import data</string>
    <string name="dataExported">Data exported</string>
    <string name="warning">WARNING!</string>
    <string name="reloadDatabase">You are about to drop all contents of the existing database and reload its contents with the data, found on the sdcard.\nAfterwards, the app is closed and must be restarted again!\nAre you sure?</string>
    <string name="addWatch">add watch</string>
    <string name="delete_this_watch">Delete this watch</string>
    <string name="edit_this_watch">Edit this watch</string>
    <string name="headlineEditWatch">Edit watch</string>
    <string name="label_model">Model:</string>
    <string name="label_serial">Serial:</string>
    <string name="label_remarks">Remarks:</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="timeYourWatch">Time of your watch</string>
    <string name="measure">Measure</string>
    <string name="timeSourceNone">Time Source: NONE  (enable Network or GPS)</string>
    <string name="timeSourceNtp">Time Source: NTP</string>
    <string name="timeSourceGps">Time Source: GPS</string>
    <string name="referenceTime">Reference Time: %1$s:%2$s:%3$s</string>
    <string name="secondsToZero">(Seconds to zero)</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="selected_watch">Selected watch</string>
    <string name="addWatchHeadline">Add watch</string>
    <string name="createdWatch">Created watch: %s</string>
    <string name="deleteWatchQuestion">Do you want to delete the watch %s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deletedWatch">Deleted watch %s</string>

</resources>
