<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="fill_parent" android:layout_width="fill_parent">
    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textViewAddWatch" android:layout_width="fill_parent" android:gravity="center_horizontal" android:text="@string/headlineEditWatch"></TextView>

    <TableLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/tableLayoutAddWatch" android:stretchColumns="1" android:layout_marginTop="20dp">
        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:id="@+id/textViewAddWatchModel" android:layout_width="fill_parent" android:gravity="center_horizontal" android:text="@string/label_model"></TextView>
            <EditText android:id="@+id/editTextModel" android:layout_height="wrap_content" android:layout_width="fill_parent">
                <requestFocus></requestFocus>
            </EditText>
        </TableRow>
        <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:id="@+id/textViewAddWatchSerial" android:layout_width="fill_parent" android:gravity="center_horizontal" android:text="@string/label_serial"></TextView>
            <EditText android:id="@+id/editTextSerial" android:layout_height="wrap_content" android:layout_width="fill_parent"></EditText>
        </TableRow>
        <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="100dp">
            <TextView android:layout_height="wrap_content" android:id="@+id/textViewAddWatchRemarks" android:layout_width="fill_parent" android:gravity="center_horizontal" android:text="@string/label_remarks"></TextView>
            <EditText android:id="@+id/editTextRemarks" android:layout_height="100dp" android:inputType="textMultiLine" android:layout_width="wrap_content"></EditText>
        </TableRow>
    </TableLayout>

    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:layout_width="fill_parent" android:layout_gravity="right" android:gravity="right" android:layout_marginTop="20dp">
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/buttonCancel" android:text="@string/cancel"></Button>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/buttonOk" android:text="@string/OK"></Button>
    </LinearLayout>

</LinearLayout>